# taipo

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  fix-chrome-audio.js  index-itch.html  index.html
.github/workflows/: ci.yaml  release.yaml
assets/: enemy_atlas.assets.ron
assets/atlas/: crab.atlas.ron  deathknight.atlas.ron  skeleton.atlas.ron  skeleton2.atlas.ron  snake.atlas.ron
assets/data/: game.ron
assets/data/anim/: crab.anim.ron  deathknight.anim.ron  skeleton.anim.ron  skeleton2.anim.ron  snake.anim.ron
assets/data/word_list/: english.txt  kana.jp.txt  n5.jp.txt  yamanote.jp.txt
assets/textures/: horizontal-promo.tmx  level1.tmx  tiled-test.tmx  vertical-promo.tmx
src/: action_panel.rs  app_stages.rs  atlas_loader.rs  autotype.rs  bullet.rs  data.rs  enemy.rs  game_over.rs  healthbar.rs  japanese_parser.rs  layer.rs  loading.rs  main.rs  main_menu.rs  map.rs  reticle.rs  tower.rs  typing.rs  ui.rs  ui_color.rs  ui_z.rs  util.rs  wave.rs  with_related.rs
web/: index.html
