[package]
name = "taipo"
version = "0.5.0"
authors = ["Rob Parrett <robparrett@gmail.com>"]
edition = "2021"
repository = "https://github.com/rparrett/taipo"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "x11",
    "vorbis",
    "webgl2",
] }

bevy_asset_loader = { path = "../bevy_asset_loader/bevy_asset_loader", features = [
    "2d",
    "standard_dynamic_assets",
] }
bevy_common_assets = { git = "https://github.com/NiklasEi/bevy_common_assets", branch = "bevy_main", features = [
    "ron",
] }
bevy_ecs_tilemap = { path = "../bevy_ecs_tilemap", features = ["atlas"] }

tiled = { version = "0.11", default-features = false }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
ron = "0.8"
chumsky = "0.9"
rand = { version = "0.8" }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
