[package]
name = "taipo"
version = "0.6.0"
authors = ["Rob Parrett <robparrett@gmail.com>"]
edition = "2021"
repository = "https://github.com/rparrett/taipo"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0-rc.2", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "x11",
    "vorbis",
    "webgl2",
    # TODO Remove these before release. See https://github.com/bevyengine/bevy/issues/13728
    "ktx2",
    "zstd",
    "bevy_pbr",
] }

bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", branch = "bevy_main" }
bevy_common_assets = { version = "0.11.0-rc.2.1", features = ["ron"] }
bevy_ecs_tilemap = { git = "https://github.com/ChristopherBiscardi/bevy_ecs_tilemap", branch = "bevy-0.14", features = [
    "atlas",
] }

tiled = { version = "0.11", default-features = false }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
ron = "0.8"
chumsky = "0.9"
rand = { version = "0.8" }

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
manual_let_else = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
