[package]
name = "taipo"
version = "0.6.0"
authors = ["Rob Parrett <robparrett@gmail.com>"]
edition = "2021"
repository = "https://github.com/rparrett/taipo"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_winit",
    "bevy_window",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_input_focus",
    "bevy_picking",
    "bevy_ui_picking_backend",
    "multi_threaded",
    "png",
    "x11",
    "vorbis",
    "webgl2",
] }

bevy_asset_loader = { version = "0.23.0-rc.3" }
bevy_common_assets = { version = "0.13", features = ["ron"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", features = [
    "atlas",
] }

tiled = { version = "0.11", default-features = false }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
ron = "*"
chumsky = "0.9"
rand = { version = "0.8" }

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
manual_let_else = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
